--- a/project/roles/shadowsocks/tasks/kernel.yml
+++ b/project/roles/shadowsocks/tasks/kernel.yml
@@ -3,9 +3,9 @@
     state: present
     key: https://www.elrepo.org/RPM-GPG-KEY-elrepo.org
 
-- name: install
-  apt_rpm:
-    pkg: https://www.elrepo.org/elrepo-release-7.0-3.el7.elrepo.noarch.rpm
+- name: install elrepo
+  yum:
+    name: https://www.elrepo.org/elrepo-release-7.0-3.el7.elrepo.noarch.rpm
     state: present
 
 - name: update kernel when linux kernel version is below 4.0
