--- a/project/roles/shadowsocks/tasks/main.yml
+++ b/project/roles/shadowsocks/tasks/main.yml
@@ -6,7 +6,7 @@
   
 - name: install shadowsocks related soft
   yum:
-    name: {{ item }}
+    name: '{{ item }}'
     state: latest
   with_items:
     - libev
