--- a/project/roles/shadowsocks/tasks/main.yml
+++ b/project/roles/shadowsocks/tasks/main.yml
@@ -22,7 +22,13 @@
     state: link
     force: yes
 
-- name: copy ss bin
+- name: create ss dir
+  file:
+    path: '{{ SS_DIR }}'
+    state: directory
+    mode: 0755
+
+- name: copy ss tar file
   unarchive:
     src: shadowsocks.tgz
     dest: '{{ SS_DIR }}'
@@ -37,7 +43,7 @@
 
 - name: start ss server
   shell: ss-server -p {{ SS_PORT}} -k {{ SS_PASSWORD }} -m aes-256-cfb --fast-open -f /tmp/ss.pid
-    args: 
+  args: 
       chdir: '{{ SS_DIR }}'
 
 - name: start ss when os boot
