优化yum安装多个包

--- a/project/roles/basic/tasks/main.yml
+++ b/project/roles/basic/tasks/main.yml
@@ -8,14 +8,13 @@
 
 - name: Install basic soft
   yum:
-    name: '{{ item }}'
+    name:
+      - libselinux-python
+      - vim-enhanced
+      - wget
+      - net-tools
+      - bind-utils
     state: latest
-  with_items:
-    - libselinux-python
-    - vim-enhanced
-    - wget
-    - net-tools
-    - bind-utils
 
 - name: Disable SELinux
   selinux:
