--- a/project/roles/shadowsocks/tasks/kernel.yml
+++ b/project/roles/shadowsocks/tasks/kernel.yml
@@ -11,7 +11,6 @@
 - name: update kernel
   yum:
     name: kernel-ml
-    state: absent
+    state: present
     enablerepo: elrepo-kernel
-    update_cache: yes
   notify: reboot
